--- a/src/index.html
+++ b/src/index.html
@@ -1536,7 +1536,8 @@
 <div>
   <section class="w-full">
     <div
-            class="grid max-w-screen-xl px-4 mx-auto lg:gap-8 xl:gap-0 lg:grid-cols-0 xs:mt-28 sm:mt-[-18%]"
+            class="grid max-w-screen-xl px-4 mx-auto lg:gap-8 xl:gap-0 lg:grid-cols-0 xs:mt-28
+             sm:mt-[-18%] 2xl:mt-[-2%] xl:mt-[0%] lg:mt-[-11%]"
     >
       <div class="">
         <h1
@@ -1699,9 +1700,10 @@
 
 <!-- Our FAQs  -->
 <div>
-  <section class="w-[100%] mt-[100px] md:mt-[269px] 2xl:mt-[7%]">
+  <section class="w-[100%] mt-[100px] md:mt-[269px] 2xl:mt-[7%] ">
     <div
-            class="grid max-w-screen-xl px-4 mx-auto lg:gap-8 xl:gap-0 lg:grid-cols-0 sm:mt-[36%]"
+            class="grid max-w-screen-xl px-4 mx-auto lg:gap-8 xl:gap-0 lg:grid-cols-0 sm:mt-[36%] 2xl:mt-[10%]
+             xl:mt-[-12%] lg:mt-[-12%] md:-[-12%] sm:mt-[-12%]"
     >
       <div class="">
         <h1
