--- a/src/index.html
+++ b/src/index.html
@@ -293,7 +293,7 @@
                     <div class="border-[3px] border-[#F0B80F] rounded-[24px] w-[84px] h-[6px] about-underline"></div>
                 </div>
                 <br/>
-                <div class="grid max-w-screen-xl px-4 mx-auto lg:gap-8 xl:gap-0 lg:grid-cols-12">
+                <div class="grid max-w-screen-2xl px-4 mx-auto lg:gap-8 xl:gap-0 lg:grid-cols-12">
                     <div class="bg-[#FAFAFC] mx-auto lg:flex justify-start items-center gap-8 2xl:w-[1246px]
                         2xl:h-[642px] 2xl:flex-row xl:w-[1246px] xl:h-[642px] lg:w-[925px] xl:flex-row lg:flex-col
                         lg:h-[1103px] md:w-[746px] md:mx-auto md:h-[1101px] sm:w-[626px] sm:h-[1205px]">
@@ -367,14 +367,14 @@
         <!-- services -->
         <div>
             <section class="w-[100%] h-[100%]" id="services">
-                <div class="grid max-w-screen-xl px-4 mx-auto lg:gap-8 xl:gap-0 lg:grid-cols-0">
+                <div class="grid max-w-screen-2xl px-4 mx-auto lg:gap-8 xl:gap-0 lg:grid-cols-0">
                     <div class="grid justify-items-center ">
                         <h1 class="main-title text-center pt-20 pb-[10px] xs:pt-[10rem]">
                             Our Services
                         </h1>
                         <div class="border-[3px] border-[#F0B80F] rounded-[24px] w-[84px] h-[6px] about-underline"></div>
                     </div>
-                    <div class="grid max-w-screen-xl px-4 mx-auto lg:gap-8 xl:gap-0 mt-[60px]">
+                    <div class="grid max-w-screen-2xl mx-auto lg:gap-8 xl:gap-0 mt-[60px]">
                             <div class="md:flex items-center justify-center justify-around">
                                 <div class="w-[100%] pr-[10px]">
                                     <div class="flex justify-center flex-wrap">
@@ -564,7 +564,7 @@
         <!-- team -->
         <div>
             <section class="">
-                <div class="grid max-w-screen-xl px-4 mx-auto lg:gap-8 xl:gap-0 lg:grid-cols-0 justify-items-center ">
+                <div class="grid max-w-screen-2xl px-4 mx-auto lg:gap-8 xl:gap-0 lg:grid-cols-0 ">
                     <h1 class="main-title text-center pt-20 pb-[10px]">
                         Meet Our Team
                     </h1>
@@ -1046,7 +1046,7 @@
         <!-- blog -->
         <div id="">
             <section class="w-[100%] h-[100%]" id="blog">
-                <div class="grid max-w-screen-xl px-4 mx-auto lg:gap-8 xl:gap-0 lg:grid-cols-0 xs:mt-28 sm:mt-[-18%] 2xl:mt-[-2%] xl:mt-[0%] lg:mt-[-11%]">
+                <div class="grid max-w-screen-2xl px-4 mx-auto lg:gap-8 xl:gap-0 lg:grid-cols-0 xs:mt-28 sm:mt-[-18%] 2xl:mt-[-2%] xl:mt-[0%] lg:mt-[-11%]">
                     <div class="grid justify-items-center ">
                         <h1 class="main-title text-center pt-20 pb-[10px]">
                             Our Blog
