--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,6 @@
             .main-heading{
                 font-family: 'Satoshi', sans-serif;
                 font-weight:900;
-                font-size:56px;
-                line-height:68px;
                 color:#1C1C1C
             }
             .sub-heading{
@@ -246,7 +244,7 @@
             <section class="text-gray-700 body-font">
             <div class="mx-auto flex py-24 md:flex-row lg:ml-[10%] pr-0 flex-col-reverse items-center">
                 <div class="md:pl-[10px] lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center md:mt-[-7%]">
-                    <h1 class="max-w-2xl max-sm:text-[30px] md:text-[30px] mb-8 font-extrabold dark:text-white satoshi-font sm:text-[2rem] xs:text-4xl sm:mt-[16%] xs:mt-[12%] main-heading">
+                    <h1 class="max-w-2xl max-sm:text-[30px] lg:text-[56px] md:text-[30px] mb-8 font-extrabold dark:text-white satoshi-font sm:text-[2rem] xs:text-4xl sm:mt-[16%] xs:mt-[12%] lg:leading-[68px] xs:leading-[43px] main-heading">
                         Everything you <br/>
                         need to run your <br/>
                         online business
@@ -377,7 +375,7 @@
                     <div class="grid max-w-screen-2xl mx-auto lg:gap-8 xl:gap-0 mt-[60px]">
                             <div class="md:flex items-center justify-center justify-around">
                                 <div class="w-[100%] pr-[10px]">
-                                    <div class="flex justify-center flex-wrap">
+                                    <div class="flex justify-center flex-wrap xs:mt-[35px]">
                                         <img class="rounded-[32px]" src="assets/imgonline-com-ua-resize-eYXpKIqyJA9NTp.png"/>
                                         <div class="text-center">
                                             <div class="text-[22px] leading-[29.7px] font-[700] text-[#000000] satoshi-font mt-[24px]">
@@ -391,7 +389,7 @@
                                     </div>
                                 </div>
                                 <div class="w-[100%] pr-[10px]">
-                                    <div class="flex justify-center flex-wrap">
+                                    <div class="flex justify-center flex-wrap xs:mt-[35px]">
                                         <img class="rounded-[32px]" src="assets/i.fb-icon-element-3.png"/>
                                         <div class="text-center">
                                             <div class="text-[22px] leading-[29.7px] font-[700] text-[#000000] satoshi-font mt-[24px]">
@@ -405,7 +403,7 @@
                                     </div>
                                 </div>
                                 <div class="w-[100%] pr-[10px]">
-                                    <div class="flex justify-center flex-wrap">
+                                    <div class="flex justify-center flex-wrap xs:mt-[35px]">
                                         <img class="rounded-[32px]" src="assets/i.fb-icon-element-2_margin (1).png"/>
                                         <div class="text-center">
                                             <div class="text-[22px] leading-[29.7px] font-[700] text-[#000000] satoshi-font mt-[24px]">
@@ -419,7 +417,7 @@
                                     </div>
                                 </div>
                                 <div class="w-[100%] pl-[10px]">
-                                    <div class="flex justify-center flex-wrap">
+                                    <div class="flex justify-center flex-wrap xs:mt-[35px]">
                                         <img class="rounded-[32px]" src="assets/i.fb-icon-element-5.png"/>
                                         <div class="text-center">
                                             <div class="text-[22px] leading-[29.7px] font-[700] text-[#000000] satoshi-font mt-[24px]">
@@ -808,7 +806,7 @@
         </div>
 
         <!-- What People Say  -->
-        <div class="container my-24 mx-auto px-[50px] md:px-6 satoshi-font xs:px-[20px] sm:mt-[7rem]">
+        <div class="container my-24 mx-auto px-[50px] md:px-6 satoshi-font xs:px-[3px] sm:mt-[7rem]">
             <section class="mb-32 text-center justify-items-center ">
                 <div class="grid justify-items-center mb-12">
                     <h2 class="main-title  text-3xl font-[900] pb-[10px]">What People Say</h2>
@@ -1093,7 +1091,7 @@
                                 </div>
                             </div>
                             <div class="w-full lg:w-[33.33%] p-4 md:px-[50px] xs:mt-[-127px] 2xl:px-[10px]">
-                                <div class="pt-[60px]">
+                                <div class="pt-[60px] xs:mt-[60px]">
                                     <div class="w-full h-[500px]">
                                         <div>
                                             <img
@@ -1131,7 +1129,7 @@
                                 </div>
                             </div>
                             <div class="w-full lg:w-[33.33%] p-4 xs:mt-[-127px] 2xl:px-[10px] md:px-[50px]">
-                            <div class="pt-[60px]">
+                            <div class="pt-[60px] xs:mt-[60px]">
                                 <div class="w-full h-[500px]">
                                     <div>
                                         <img
