--- a/src/index.html
+++ b/src/index.html
@@ -1044,7 +1044,7 @@
         <!-- blog -->
         <div id="">
             <section class="w-[100%] h-[100%]" id="blog">
-                <div class="grid max-w-screen-2xl px-4 mx-auto lg:gap-8 xl:gap-0 lg:grid-cols-0 xs:mt-28 sm:mt-[-18%] 2xl:mt-[-2%] xl:mt-[0%] lg:mt-[-11%]">
+                <div class="grid max-w-screen-2xl px-4 xs:mt-[-11rem] mx-auto lg:gap-8 xl:gap-0 lg:grid-cols-0 sm:mt-[-18%] 2xl:mt-[-2%] xl:mt-[0%] lg:mt-[-11%]">
                     <div class="grid justify-items-center ">
                         <h1 class="main-title text-center pt-20 pb-[10px]">
                             Our Blog
