--- a/src/index.html
+++ b/src/index.html
@@ -196,7 +196,7 @@
             }
         </style>
         <div>
-            <nav class="bg-white dark:bg-gray-900 fixed w-full z-20 top-0 left-0 border-gray-200 dark:border-gray-600">
+            <nav class="bg-white dark:bg-gray-900 fixed w-full z-20 top-0 left-0 border-gray-200 dark:border-gray-600 h-[100px]">
             <div class="max-w-screen-2xl flex flex-wrap items-center justify-between mx-auto p-4">
                 <a href="" class="flex items-center">
                     <img src="assets/Group.png" class="h-[48px] W-[41.57px] mr-2"/>
@@ -876,7 +876,7 @@
         </div>
 
         <!-- What People Say  -->
-        <div class="mx-auto px-[50px] md:px-6 satoshi-font xs:px-[3px]">
+        <div class="mx-auto px-[50px] md:px-6 satoshi-font xs:px-[3px] max-w-screen-2xl">
             <section class="mb-32 text-center justify-items-center ">
                 <div class="grid justify-items-center mb-[65px] mt-[7rem]">
                     <h2 class="main-title  text-3xl font-[900] pb-[10px]">What People Say</h2>
@@ -1420,7 +1420,7 @@
             <footer class="bg-white dark:bg-gray-900 mt-20">
                 <div class="w-full max-w-screen-2xl mx-auto p-4 md:py">
                     <div class="grid 2xl:grid-cols-4 xl:grid-cols-4 lg:grid-cols-4 md:grid-cols-2 sm:grid-cols-2 xs:grid-cols-2 gap-8">
-                        <div>
+                        <div class="xl:ml-[-10rem] lg:ml-[-10rem]">
                             <a href="" class="flex items-center justify-center sm:justify-center">
                                 <img src="assets/Group.png" class="h-[48px] w-[41.57px] mr-[2rem]"/>
                                 <span class="text-2xl font-bold">DIGITO</span>
