footer spacing fix

--- a/src/index.html
+++ b/src/index.html
@@ -128,11 +128,6 @@
             .backgroundimg {
                 clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 0% 100%);
             }
-            @media (max-width: 600px) {
-                .backgroundimg {
-                    clip-path: none;
-                }
-            }
             .activeUl {
                 color: blue;
                 display: block;
@@ -166,6 +161,12 @@
 
             @media (max-width: 768px) {
                 html {font-size: 14px;}
+            }
+            @media (max-width: 767px) {
+                html {font-size: 14px;}
+                .backgroundimg {
+                    clip-path: none;
+                }
             }
             .flip-container {
                 perspective: 1000;
@@ -209,7 +210,7 @@
                 </a>
                 <div class="flex md:order-2 items-center">
                     <button type="button"
-                            class="satoshi-font text-white w-[110px] h-[40px] md:h-[54px] md:w-[147px] bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm px-4 py-2 text-center mr-3 md:mr-0 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                            class="satoshi-font text-white text-[10px] w-[90px] h-[35px] md:h-[54px] md:w-[147px] bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full md:text-sm px-4 py-2 text-center mr-3 md:mr-0 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                         Install Theme
                     </button>
                     <button
@@ -410,7 +411,7 @@
                     </div>
                     <div class="grid max-w-screen-2xl mx-auto lg:gap-8 xl:gap-0 mt-[60px]">
                             <div class="md:flex items-center justify-center justify-around">
-                                <div class="w-[100%] pr-0 md:pr-[10px]">
+                                <div class="w-[100%] mb-8 md:mb-0 pr-0 md:pr-[10px]">
                                     <div class="flex justify-center flex-wrap xs:mt-[35px]">
                                         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
                                             <div class="flipper">
@@ -433,7 +434,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="w-[100%] pr-[10px]">
+                                <div class="w-[100%] mb-8 md:mb-0 pr-[10px]">
                                     <div class="flex justify-center flex-wrap xs:mt-[35px]">
                                         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
                                             <div class="flipper">
@@ -456,7 +457,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="w-[100%] pr-[10px]">
+                                <div class="w-[100%] mb-8 md:mb-0 pr-[10px]">
                                     <div class="flex justify-center flex-wrap xs:mt-[35px]">
                                         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
                                             <div class="flipper">
@@ -479,7 +480,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="w-[100%] pl-[10px]">
+                                <div class="w-[100%] mb-8 md:mb-0 pl-[10px]">
                                     <div class="flex justify-center flex-wrap xs:mt-[35px]">
                                         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
                                             <div class="flipper">
@@ -1423,19 +1424,19 @@
         <!-- footer -->
         <div>
             <footer class="bg-white dark:bg-gray-900 mt-20">
-                <div class="w-full max-w-screen-2xl mx-auto p-4 md:py">
+                <div class="w-full max-w-screen-2xl mx-auto p-5 md:py">
                     <div class="grid 2xl:grid-cols-4 xl:grid-cols-4 lg:grid-cols-4 md:grid-cols-2 sm:grid-cols-2 xs:grid-cols-2 gap-8">
-                        <div class="xl:ml-[-10rem] lg:ml-[-10rem]">
-                            <a href="" class="flex items-center justify-center sm:justify-center">
-                                <img src="assets/Group.png" class="h-[48px] w-[41.57px] mr-[2rem]"/>
+                        <div>
+                            <a href="" class="flex items-center justify-start">
+                                <img src="assets/Group.png" class="h-[48px] w-[41.57px] mr-[0.5rem]"/>
                                 <span class="text-2xl font-bold">DIGITO</span>
                             </a>
                             <div>
                                 <ul class="items-center text-center sm:text-center mb-6 text-sm font-medium text-gray-500 sm:mb-0 dark:text-gray-400 mt-6 text-gray-500 dark:text-gray-400 font-medium inline-font">
-                                    <li class="mb-4">
+                                    <li class="mb-4 text-left">
                                         <a href="" class="satoshi-font font-medium text-[16px] leading-[21.6px]" style="color: #1C1C1C">Call - <span style="color: #808080">(123) 45678910</span></a>
                                     </li>
-                                    <li class="mb-4">
+                                    <li class="mb-4 text-left">
                                         <a href="" class="satoshi-font font-medium text-[16px] leading-[21.6px]" style="color: #1C1C1C">Mail - <span style="color: #808080">info@digito.com</span></a>
                                     </li>
                                 </ul>
